welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: type mismatch;
 found   : Unit
 required: String
val A:String = avance()
                     ^