welcome.lessons.welcome.bdr.BDR.scala.code
val A:String = avance()
A